removed type attribute from script tag

--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a target="_blank" href="https://github.com/Saga-sanga">Reckson Khiangte</a>.
   </footer>
-  <script type="text/javascript" src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
