--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <style>
     .attribution {font-family: 'Manrope', sans-serif; font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
-    #random-advice-button:hover, #random-advice-button:focus { box-shadow: 0px 0px 20px 0px hsl(150deg 100% 66%);}
+    #random-advice-button:hover { box-shadow: 0px 0px 20px 0px hsl(150deg 100% 66%);}
   </style>
 </head>
 <body class="bg-dark-blue">
