--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <style>
     .attribution {font-family: 'Manrope', sans-serif; font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
+    #random-advice-button {transition: box-shadow 0.3s ease-out;}
     #random-advice-button:hover { box-shadow: 0px 0px 20px 0px hsl(150deg 100% 66%);}
   </style>
 </head>
